2011-08-13  Sergei Gavrikov  <sergei.gavrikov@gmail.com>

	* cdl/hal_synth.cdl (CYGPKG_HAL_SYNTH_TESTS): Fix a typo in make rule.

2009-08-13  Bart Veer  <bartv@ecoscentric.com>

	* src/synth.ld (SECTION_eh_frame): allow for a .eh_frame_hdr
	section.

2009-07-16  Bart Veer  <bartv@ecoscentric.com>

	* src/synth_diag.c: add locking to the HAL diag code. Remove an
	unnecessary fdatasync().

2009-07-14  Bart Veer  <bartv@ecoscentric.com>

	* host/configure.in: allow builds on x86_64 machines.

	* host/configure, host/Makefile.in, host/aclocal.m4: regenerate.

2009-07-09  Bart Veer  <bartv@ecoscentric.com>

	* host/ecosynth.tcl: fix problems with balloon help when widgets
	are deleted.

	* include/hal_io.h: add unlink() and rename() prototypes

2009-02-07  John Dallaway  <john@dallaway.org.uk>

	* cdl/hal_synth.cdl: Parent under the common HAL package as with
	other architectural HAL packages.

2008-12-30  John Dallaway  <john@dallaway.org.uk>

	* cdl/hal_synth.cdl: Reference per-package documentation.

2008-10-07  Bart Veer  <bartv@ecoscentric.com>

	* host/ecosynth.tcl: another attempt to fix the X problems when
	shutting down.

2008-08-28  Bart Veer  <bartv@ecoscentric.com>

	* host/configure: regenerate after update of Tcl macro

2008-08-20  Bart Veer  <bartv@ecoscentric.com>

	* host/configure: regenerate after update of Tcl macro

2008-08-18  Bart Veer  <bartv@ecoscentric.com>

	* host/Makefile.am, host/configure.in, ecosynth.c: update
	host-side configury.
	* host/Makefile.in, host/aclocal.m4, host/configure: regenerate

2008-08-13  Bart Veer  <bartv@ecoscentric.com>

	* host/ecosynth.tcl: avoid X problems when shutting down.
	* src/synth.ld: update for recent gcc versions.
	* cdl/hal_synth.cdl: use the right compiler flags to avoid a build
	warning. 

2007-06-12  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/synth_entry.c (__stack_chk_fail): another new function
	needed when building with gcc 4.1.2
	* current/src/synth.ld: place eh_frame_hdr into eh_frame.
